@@ -110,7 +110,7 @@ switch ($op) {
         break;
     case 'delete':
         $infofieldsObj = $infofieldsHandler->get($addField_id);
-        if (\Xmf\Request::hasVar('ok') && 1 == $_REQUEST['ok']) {
+        if (1 == Request::getInt('ok', 0)) {
             if (!$GLOBALS['xoopsSecurity']->check()) {
                 \redirect_header('infofields.php', 3, \implode(', ', $GLOBALS['xoopsSecurity']->getErrors()));
             }
