@@ -166,7 +166,7 @@ switch ($op) {
         $relationsObj = $relationsHandler->get($relId);
         $teamObj = $teamsHandler->get($relationsObj->getVar('rel_team_id'));
         $memberObj = $membersHandler->get($relationsObj->getVar('rel_member_id'));
-        if (\Xmf\Request::hasVar('ok') && 1 == $_REQUEST['ok']) {
+        if (1 == Request::getInt('ok', 0)) {
             if (!$GLOBALS['xoopsSecurity']->check()) {
                 \redirect_header('relations.php', 3, \implode(', ', $GLOBALS['xoopsSecurity']->getErrors()));
             }
