@@ -39,3 +39,45 @@
 .wgteams-lined div {border-top: 1px solid #e9e9e9;border-left: 0;border-right: 0;border-bottom: 0;}
 .wgt-card-panel {padding:5px;}
 .wgt-card {padding:10px;background-color:#ffffff;border: 1px solid #cccccc;border-radius:5px;}
+
+.member-img img {
+    cursor: pointer;
+}
+
+.modal-body {
+    text-align: center;
+}
+
+.member-image {
+    margin-bottom: 20px;
+}
+
+.member-name {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.member-details {
+    text-align: left;
+}
+
+
+.member-details p {
+    margin-bottom: 10px;
+    color: #333; /* Dark grey text */
+}
+
+.member-details strong {
+    color: #000; /* Black for labels */
+    margin-right: 5px;
+}
+
+.member-details a {
+    color: #007BFF; /* Bootstrap default blue */
+    text-decoration: none;
+}
+
+.member-details a:hover {
+    text-decoration: underline;
+}
