@@ -25,12 +25,17 @@ declare(strict_types=1);
  */
 
 use Xmf\Request;
-use XoopsModules\Wgteams;
+use Xmf\Module\Helper\AjaxHelper;
+use XoopsModules\Wgteams\{
+    Helper,
+    Members
+};
 
 require __DIR__ . '/header.php';
+
 $GLOBALS['xoopsOption']['template_main'] = 'wgteams_teams.tpl';
 require_once \XOOPS_ROOT_PATH . '/header.php';
-$helper    = Wgteams\Helper::getInstance();
+$helper    = Helper::getInstance();
 $startpage = $helper->getConfig('startpage', 0)[0];
 
 $team_id = Request::getInt('team_id');
@@ -82,6 +87,7 @@ if (\count($teams_list) > 0) {
 $GLOBALS['xoopsTpl']->assign('xoops_icons32_url', XOOPS_ICONS32_URL);
 $GLOBALS['xoopsTpl']->assign('wgteams_upload_url', \WGTEAMS_UPLOAD_URL);
 $GLOBALS['xoopsTpl']->assign('wgteams_teams_upload_url', \WGTEAMS_UPLOAD_URL . '/teams/images/');
+$GLOBALS['xoopsTpl']->assign('wgteams_url', WGTEAMS_URL);
 
 // Display Navigation
 if ($teamsCount > $limit) {
@@ -99,6 +105,86 @@ if (1 == $helper->getConfig('wgteams_showbreadcrumbs')) {
     }
     $GLOBALS['xoopsTpl']->assign('showbreadcrumbs', '1');
 }
+
+//---------- AJAX Modal Start -------------------
+
+$xoopsLogger->activated = false;
+
+if (Request::getMethod() === 'POST' && Request::hasVar('member_id', 'POST')) {
+    $memberId = Request::getInt('member_id', 0, 'POST');
+    if ($memberId > 0) {
+        $membersHandler = $helper->getHandler('members');
+        $member = $membersHandler->get($memberId);
+
+        if ($member instanceof Members) {
+            $memberDetails = renderMemberDetails($member);
+
+            $ajaxHelper = new AjaxHelper();
+            $ajaxHelper->addData('member_name', $memberDetails['member_name']);
+            $ajaxHelper->addData('member_image', $memberDetails['member_image']);
+            $ajaxHelper->addData('member_details', $memberDetails['member_details']);
+            $ajaxHelper->setSuccess(true);
+            $ajaxHelper->sendResponse();
+            exit();
+        }
+    }
+}
+
+function renderMemberDetails($member) {
+
+    $details = '';
+    $memberImage = '';
+
+    if ($member->getVar('member_lastname')) {
+        $memberName = '<strong>Name: </strong> ' . html_entity_decode($member->getVar('member_firstname'), ENT_QUOTES | ENT_HTML5) . ' ' . html_entity_decode($member->getVar('member_lastname'), ENT_QUOTES | ENT_HTML5);
+        $details    .= '<strong>Name: </strong> ' . html_entity_decode($member->getVar('member_firstname'), ENT_QUOTES | ENT_HTML5) . ' ' . html_entity_decode($member->getVar('member_lastname'), ENT_QUOTES | ENT_HTML5);
+    }
+
+    if ($member->getVar('member_image')) {
+        $imageUrl =  WGTEAMS_UPLOAD_URL . '/members/images/' . $member->getVar('member_image');
+        $imageName = $member->getVar('member_name');
+        $memberImage = '<img src="' . $imageUrl . '" alt="' . $imageName . '" title="' . $imageName . '" class="img-fluid">';
+    }
+
+
+
+    if ($member->getVar('member_address')) {
+        $address = html_entity_decode($member->getVar('member_address'), ENT_QUOTES | ENT_HTML5);
+        $details .= '<div><strong>' . _MA_WGTEAMS_MEMBER_ADDRESS . ':</strong> ' . $address . '</div>';
+    }
+
+    if ($member->getVar('member_phone')) {
+        $phone = html_entity_decode($member->getVar('member_phone'), ENT_QUOTES | ENT_HTML5);
+        $details .= '<div><strong>' . _MA_WGTEAMS_MEMBER_PHONE . ':</strong> ' . $phone . '</div>';
+    }
+
+    if ($member->getVar('member_email')) {
+        $email = html_entity_decode($member->getVar('member_email'), ENT_QUOTES | ENT_HTML5);
+        $details .= '<div><strong>' . _MA_WGTEAMS_MEMBER_EMAIL . ':</strong> ' . $email . '</div>';
+    }
+
+
+    // Render additional info fields
+    for ($i = 1; $i <= 5; $i++) {
+        $infoField = 'info_' . $i;
+        $infoFieldName = $infoField . '_name';
+
+        if ($member->getVar($infoField)) {
+            $info = html_entity_decode($member->getVar($infoField), ENT_QUOTES | ENT_HTML5);
+            $details .= '<div><strong>' . $member->getVar($infoFieldName) . ':</strong> ' . $info . '</div>';
+        }
+    }
+
+    return [
+        'member_image'   => $memberImage,
+//                'member_name' => $member->getVar('member_name'),
+        'member_name'    => $memberName,
+        'member_details' => $details,
+    ];
+}
+
+//---------- AJAX Modal End -------------------
+
 // keywords
 wgteamsMetaKeywords($helper->getConfig('keywords') . ', ' . \implode(', ', $keywords));
 unset($keywords);
@@ -108,3 +194,7 @@ wgteamsMetaDescription(_MA_WGTEAMS_TEAM_DESC);
 $GLOBALS['xoopsTpl']->assign('wgteams_url_index', \WGTEAMS_URL . '/index.php');
 $GLOBALS['xoopsTpl']->assign('xoops_mpageurl', \WGTEAMS_URL . '/index.php');
 require __DIR__ . '/footer.php';
+
+
+
+
