@@ -8,4 +8,5 @@
         <{/foreach}>
     </div>
 <{/if}>
+<{include file='db:wgteams_member_modal.tpl'}>
 <{include file='db:wgteams_footer.tpl'}>
