@@ -35,9 +35,9 @@ $moduleDirNameUpper = \mb_strtoupper($moduleDirName);
 
 // ------------------- Information ------------------- /
 $modversion = [
-    'version'             => '2.0.1',
-    'module_status'       => 'RC2',
-    'release'             => '2024/03/07', // format: yyyy/mm/dd
+    'version'             => '2.0.2',
+    'module_status'       => 'Beta1',
+    'release'             => '2024/04/23', // format: yyyy/mm/dd
     'name'                => _MI_WGTEAMS_NAME,
     'description'         => _MI_WGTEAMS_DESC,
     'author'              => 'Goffy - Wedega.com',
@@ -109,6 +109,8 @@ $modversion['templates'][] = ['file' => 'wgteams_member_left.tpl', 'description'
 $modversion['templates'][] = ['file' => 'wgteams_member_right.tpl', 'description' => ''];
 $modversion['templates'][] = ['file' => 'wgteams_breadcrumbs.tpl', 'description' => ''];
 $modversion['templates'][] = ['file' => 'wgteams_footer.tpl', 'description' => ''];
+$modversion['templates'][] = ['file' => 'wgteams_member_modal.tpl', 'description' => ''];
+
 
 $modversion['templates'][] = ['file' => 'wgteams_block_teamsmembers.tpl', 'description' => '', 'type' => 'block'];
 $modversion['templates'][] = ['file' => 'wgteams_block_teams.tpl', 'description' => '', 'type' => 'block'];
